--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,5 @@
-@media screen and (min-width: 700px) and (max-width: 999px){
-    .hidden .menu ul li.li_hasChild a:hover: ul{display:block;border:1px solid red;}
+.hidden .menu ul .li_hasChild a:hover{
+    display:block;
+    border:1px solid red;
 }
+
