--- a/css/customize.css
+++ b/css/customize.css
@@ -18,8 +18,11 @@
 .MultiCheckBoxDetail {
     display:none;
     position:absolute;
+    top:0;
     border:1px solid #e2e2e2;
     overflow-y:hidden;
+    background-color: #fff;
+    z-index: 9;
 }
 
 .MultiCheckBoxDetailBody {
